# examples

./: README.md
agents-that-write-code/: .gitignore  codegen.py  diagram.html  fib.py  helpers.py  holdem.py  html.html  iss.py  scrape.py  scraper.py  to_json.py
agents-that-write-code/archive/: code_runner.py  download_html.py  generate_code_prompt.txt  main.py  output.json  scrape.py
agents-that-write-code/blocks/: review_code.py  revise_code.py  run_code.py  write_code.py
agents-that-write-code/prompts/: error.txt  review_code.txt  review_feedback.txt  revise_code_error.txt  revise_code_feedback.txt  write_code.txt
agents-that-write-code/requirements/: fib.txt  holdem.txt  iss.txt  nn.txt  scraper.txt  wikipedia.txt
data-analysis-intro/: data_SF_Employee_Compensation_jobfam_fireservices.csv  generate_graph.py
demos/mcp_and_pydanticai/: agent.py  agent_with_logfire.py  agent_with_mcp_fetch.py  agent_with_mcp_pg.py  agent_with_riza.py
examples/: html_data_extraction.py
frameworks/langgraph-gas-price-analyst-agent/: .gitignore  README.md  graph.py  main.py  pyproject.toml  state.py
frameworks/langgraph-gas-price-analyst-agent/nodes/: check_if_changed.py  create_chart.py  extract_price_data.py  scrape_prices.py  store_and_notify.py  summarize_change.py
frameworks/langgraph-gas-price-analyst-agent/types/: state.py
frameworks/langgraph-gas-price-analyst-agent/utils/: diff.py  storage.py
use-cases/data-analysis-intro/: generate_graph.py
use-cases/data-transformation-intro/: appraisers.csv  transform_appraisers_data.py
(+5 files in other folders)
